# habits-tracking

./: README.md  db.sqlite3.bak  docker-compose.yml  pyproject.toml  start-django-dev.sh
deploy/: Dockerfile  docker-compose.yml  pyproject.toml
tracking_project/: asgi.py  settings.py  urls.py  wsgi.py
