[tool.poetry]
name = "habits-tracking"
version = "0.1.0"
description = ""
authors = ["DidenkoTanya <didenkotanja@yandex.ru>"]
readme = "README.md"
packages = [{include = "habits_tracking"}]

[tool.poetry.dependencies]
python = "^3.9"
django = "4.0"
psycopg2-binary = "2.9.3"
gunicorn = "20.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
